float number implementado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="butoes">
         <button class="operator" value="$">+/-</button>
         <button value="0">0</button>
-        <button value=",">,</button>
+        <button value=".">.</button>
         <button class="igual" value="=">=</button>
         <button value="1">1</button>
         <button value="2">2</button>
